tests/paczka2/big_fuzzy/99579615.err
Error in line 12: qc5 A397 61,1
Error in line 11: ud1YgSNw S802 103,3
Error in line 9: 3UN3IXNx S978 203,0
Error in line 19: 3UN3IXNx S686 27,8
Error in line 20: CdSz7Z3EXF S802 10,7
Error in line 17: ud1YgSNw S686 80,9
Error in line 32: S686SS686S97,3
Error in line 29: S686 S978 99,0
Error in line 45: qc5 S802 92,8
Error in line 46: MgF S978 29,9
Error in line 50: CdSz7Z3EXF S802 61,4
Error in line 53: CdSz7Z3EXF S686 14,7
Error in line 49: qc5 S686 56,2
Error in line 61: MgF S802 4,4
Error in line 65: MgF S686 66,7
Error in line 60: S686 S978 28,6
Error in line 70: 3UN3IXNx S802 43,7
Error in line 83: 3UN3IXNx S686 3,6
Error in line 88: 9MYKsRAA S686 -1,0
Error in line 63: 9MYKsRAA S686 95,2
Error in line 94: 3UN3IXNx S978 35,9
Error in line 109: S686 S802 62,4
Error in line 121: 3UN3IXNx A397 21,9
Error in line 131: 9MYKsRAA S686 0,1
Error in line 124: 3UN3IXNx S978 86,5
Error in line 136: qc5 S9#8 #6,1
Error in line 133: 9MYKsRAA A397 32,3
Error in line 137: 9MYKsRAA S686 92,1
Error in line 135: 3UN3IXNx S686 66,8
Error in line 138: qc5 S978 111,1
Error in line 152: qc5 A397 95,0
Error in line 154: qc5 S686 99,4
Error in line 157: MgF A397 -1,4
Error in line 159: 9MYKsRAA A397 97,1
Error in line 163: CdSz7Z3EXF S978 71,1
Error in line 160: 9MYKsRAA S978 70,9
Error in line 168: 9MYKsRAA S802 25,2
Error in line 171: 3UN3IXNx S686 27,0
Error in line 184: MgF A397 182,8
Error in line 187: S686 S978 59,0
Error in line 190: qc5 A397 86,4
Error in line 197: qc5 S802 25,5
Error in line 183: 9MYKsRAA A397 75,2
Error in line 207: qc5 A397 54,9
Error in line 188: MgF S686 70,6
Error in line 210: MgF A397 89,4
Error in line 219: S686 S978 21,3
Error in line 229: 3UN3IXNx S802 N6,0
Error in line 227: S686 S802 44,2
Error in line 230: 3UN3IXNx S802 476,2
Error in line 234: ud1YgSNw A397 5,3
Error in line 245: MgF S686 51,5
